syntax = "proto3";

package datasource;

option go_package = "datasource/grpc";

service DataSourceService {
  rpc Connect(ConnectRequest) returns (ConnectResponse) {}
  rpc Disconnect(DisconnectRequest) returns (DisconnectResponse) {}
  rpc ExecuteQuery(QueryRequest) returns (QueryResponse) {}
  rpc ExecuteCommand(CommandRequest) returns (CommandResponse) {}
  rpc GetConnectors(GetConnectorsRequest) returns (GetConnectorsResponse) {}
  rpc AddConnector(AddConnectorRequest) returns (AddConnectorResponse) {}
  rpc RemoveConnector(RemoveConnectorRequest) returns (RemoveConnectorResponse) {}
}

message ConnectRequest {
  string connector_name = 1;
}

message ConnectResponse {
  bool success = 1;
  string error = 2;
}

message DisconnectRequest {
  string connector_name = 1;
}

message DisconnectResponse {
  bool success = 1;
  string error = 2;
}

message QueryRequest {
  string connector_name = 1;
  string query = 2;
  repeated string args = 3;
}

message QueryResponse {
  repeated bytes rows = 1;
  string error = 2;
}

message CommandRequest {
  string connector_name = 1;
  string command = 2;
  repeated string args = 3;
}

message CommandResponse {
  int64 affected_rows = 1;
  string error = 2;
}

message GetConnectorsRequest {}

message GetConnectorsResponse {
  repeated string connector_names = 1;
}

message AddConnectorRequest {
  string name = 1;
  ConnectorConfig config = 2;
}

message ConnectorConfig {
  string type = 1;
  string host = 2;
  int32 port = 3;
  string username = 4;
  string password = 5;
  string database = 6;
  map<string, string> options = 7;
}

message AddConnectorResponse {
  bool success = 1;
  string error = 2;
}

message RemoveConnectorRequest {
  string name = 1;
}

message RemoveConnectorResponse {
  bool success = 1;
  string error = 2;
}